# AoC-2022

./: .pre-commit-config.yaml  pyproject.toml  solutions.jl  xd.py
notebooks/: julia-notebook.ipynb
